# D3vz API/Controllers/DBAPI/AlunoController.cs
@@ -10,19 +10,58 @@ using System.Text.Json.Serialization;
 using System.Text.RegularExpressions;
 
 namespace D3vz_API.Controllers.DBAPI {
+    public class AlunoController : UserControllerBase {
 
-    [Route("[controller]")]
-    [ApiController]
-    public class AlunoController : ControllerBase {
+        public AlunoController(ILogger<AlunoController> logger) : base(logger) { }
 
-        private readonly ILogger<AlunoController> _logger;
+        [HttpPost(), ApiExplorerSettings(IgnoreApi = false)]
+        public override IActionResult Add(string nm_user, string email, string senha, string cpf, DateTime dt_nasc, string[] interesses) {
+            try {
+                base.Add(nm_user, email, senha, cpf, dt_nasc, interesses);
 
-        public AlunoController(ILogger<AlunoController> logger) {
-            _logger = logger;
+                using (var db = new D3vzAPI_dbContext()) {
+                    var inte = MakeInterQuali(interesses, db);
+                    var user = new TUser() {
+                        Discriminacao = "aluno",
+                        NmUsuario = nm_user,
+                        DsEmail = email,
+                        DsSenha = senha,
+                        NrCpf = cpf,
+                        DtNascimento = dt_nasc,
+                        TUser_TInterQuali = MakeInterQuali(interesses, db),
+                        TAluno = new TAluno()
+                    };
+                    db.TUsers.Add(user);
+                    db.SaveChanges();
+                    return StatusCode((int) HttpStatusCode.OK);
+                }
+            } catch (Exception ex) {
+                return StatusCode((int)HttpStatusCode.InternalServerError, new JsonResult(ex));
+            }
+        }
+
+        [HttpDelete()]
+        public override IActionResult Delete(int Id) {
+            try {
+                using (var db = new D3vzAPI_dbContext()) {
+                    var aluno = db.TAlunos.Where(e => e.TUserIdUser == Id).Include(e => e.TUserIdUserNavigation).FirstOrDefault();
+                    if (aluno == null)
+                        return StatusCode((int)HttpStatusCode.NotFound, new JsonResult(new {
+                            Erro = "Cadastro não encontrado."
+                        }));
+
+                    db.TAlunos.Remove(aluno);
+                    db.TUsers.Remove(aluno.TUserIdUserNavigation);
+                    db.SaveChanges();
+                    return StatusCode((int)HttpStatusCode.OK);
+                }
+            } catch (Exception ex) {
+                return StatusCode((int) HttpStatusCode.InternalServerError, new JsonResult(ex));
+            }
         }
 
         [HttpGet("GetById")]
-        public JsonResult Get(long id) {
+        public override IActionResult Get(long id) {
             try {
                 using (var db = new D3vzAPI_dbContext()) {
                     var alunos = (from aluno in (db.TAlunos
@@ -42,12 +81,12 @@ namespace D3vz_API.Controllers.DBAPI {
                     return new JsonResult(alunos);
                 }
             } catch (Exception ex) {
-                return new JsonResult(ex);
+                return StatusCode((int)HttpStatusCode.InternalServerError, new JsonResult(ex));
             }
         }
 
         [HttpGet()]
-        public JsonResult Get(string email) {
+        public override IActionResult Get(string email) {
             try {
                 using (var db = new D3vzAPI_dbContext()) {
                     var alunos = (from aluno in (db.TAlunos
@@ -66,56 +105,12 @@ namespace D3vz_API.Controllers.DBAPI {
                     return new JsonResult(alunos);
                 }
             } catch (Exception ex) {
-                return new JsonResult(ex);
-            }
-        }
-
-        private static TUser_TInterQuali[] MakeInteresses(string[] interesses, D3vzAPI_dbContext db) {
-            try {
-                var arr = interesses.Select(s => {
-                    var interesseFounded = db.TInteresses.Where(e => e.DsLinguagem == s).FirstOrDefault();
-                    if (interesseFounded == null)
-                        return new TUser_TInterQuali() { TInterQuali_Navigation = new TInterQuali() { DsLinguagem = s } };
-                    else
-                        return new TUser_TInterQuali() { TInterQuali_Navigation = interesseFounded };
-                }).ToArray();
-                return arr;
-            } catch (Exception ex) {
-                throw;
-            }
-        }
-
-        [HttpPost()]
-        public JsonResult Add(string nm_user, string email, string senha, string cpf, DateTime dt_nasc, string[] interesses) {
-            try {
-                if (!Regex.IsMatch(email, "^\\w+([\\.-]?\\w+)*@\\w+([\\.-]?\\w+)*(\\.\\w{2,3})+$"))
-                    return new JsonResult(new {
-                        Erro = "Endereço de email inválido."
-                    });
-
-                using (var db = new D3vzAPI_dbContext()) {
-                    var inte = MakeInteresses(interesses, db);
-                    var user = new TUser() {
-                        Discriminacao = "aluno",
-                        NmUsuario = nm_user,
-                        DsEmail = email,
-                        DsSenha = senha,
-                        NrCpf = cpf,
-                        DtNascimento = dt_nasc,
-                        TUser_TInterQuali = MakeInteresses(interesses, db),
-                        TAluno = new TAluno()
-                    };
-                    db.TUsers.Add(user);
-                    db.SaveChanges();
-                    return new JsonResult("OK");
-                }
-            } catch (Exception ex) {
-                return new JsonResult(ex);
+                return StatusCode((int)HttpStatusCode.InternalServerError, new JsonResult(ex));
             }
         }
 
         [HttpPut()]
-        public JsonResult Update(long id, string? nm_user, string? email, string? senha, string? cpf, DateTime? dt_nasc, string[] interesses) {
+        public override IActionResult Update(long id, string? nm_user, string? email, string? senha, string? cpf, DateTime? dt_nasc, string[] interesses) {
             try {
                 using (var db = new D3vzAPI_dbContext()) {
                     var aluno = db.TAlunos
@@ -126,9 +121,9 @@ namespace D3vz_API.Controllers.DBAPI {
                         .FirstOrDefault();
 
                     if (aluno == null)
-                        return new JsonResult(new {
+                        return StatusCode((int) HttpStatusCode.NotFound, new JsonResult(new {
                             Erro = "Cadastro não encontrado."
-                        });
+                        }));
 
                     if (!string.IsNullOrEmpty(nm_user)) aluno.TUserIdUserNavigation.NmUsuario = nm_user;
                     if (!string.IsNullOrEmpty(email)) aluno.TUserIdUserNavigation.DsEmail = email;
@@ -141,38 +136,17 @@ namespace D3vz_API.Controllers.DBAPI {
                         foreach (var item in remover)
                             aluno.TUserIdUserNavigation.TUser_TInterQuali.Remove(item);
                         foreach (var item in adicionar)
-                            aluno.TUserIdUserNavigation.TUser_TInterQuali.Add(MakeInteresses(new string[] { item }, db).First());
+                            aluno.TUserIdUserNavigation.TUser_TInterQuali.Add(MakeInterQuali(new string[] { item }, db).First());
                     }
 
                     db.SaveChanges();
 
-                    return new JsonResult("Ok");
+                    return StatusCode((int)HttpStatusCode.OK);
                 }
             } catch (Exception ex) {
-                return new JsonResult(ex);
+                return StatusCode((int)HttpStatusCode.InternalServerError, new JsonResult(ex));
             }
         }
-
-        [HttpDelete]
-        public JsonResult Delete(int Id) {
-            try {
-                using (var db = new D3vzAPI_dbContext()) {
-                    var aluno = db.TAlunos.Where(e => e.TUserIdUser == Id).Include(e => e.TUserIdUserNavigation).FirstOrDefault();
-                    if (aluno == null)
-                        return new JsonResult(new {
-                            Erro = "Cadastro não encontrado."
-                        });
-
-                    db.TAlunos.Remove(aluno);
-                    db.TUsers.Remove(aluno.TUserIdUserNavigation);
-                    db.SaveChanges();
-                    return new JsonResult("Ok");
-                }
-            } catch (Exception ex) {
-                return new JsonResult(ex);
-            }
-        }
-
     }
 
 }
